compiler/testData/multiplatform/incompatibleProperties/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:1:8: error: actual property 'pkonst' has no corresponding expected declaration
The following declaration is incompatible because property kinds are different (konst vs var):
    public expect konst pkonst: String

actual var pkonst: String = ""
       ^
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:2:8: error: actual property 'pvar' has no corresponding expected declaration
The following declaration is incompatible because property kinds are different (konst vs var):
    public expect var pvar: String

actual konst pvar: String = ""
       ^
